<?xml version="1.0"?>
<package>
  <name>ur_arm</name>
  <version>0.6.0</version>
  <description> UR5 controller for visual servoing </description>
  
  <author>Wouter Caarls, Jethro Tan, Maarten de Vries, Berk Calli</author>
  <maintainer email="fxm@ipa.fhg.de">Felix Messmer</maintainer>
  <license>GPL</license>
  <url>http://ros.org/wiki/ur_arm</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
